# GBDT-PL

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
docs/: Installation  Installation.rst  Python-API.md  Python-API.rst
include/: alignment_allocator.hpp  argmax.h  booster.hpp  booster_config.hpp  data_partition.hpp  data_reader.hpp  datamat.hpp  feature.hpp  interface.hpp  metric.hpp  node.hpp  objective.hpp  row_histogram.hpp  split_info.hpp  tree.hpp
include/vectorize/: vectorize_common.hpp
python/: selfdata_result.csv  setup.py  test.py  test_auc.py
python/gbdtpl/: Booster.py  DataMat.py  __init__.py
python/selfdata/: selfdata_evl.csv  selfdata_test.csv  test.csv  train.csv
python3/: run.sh  test.py
python3/gbdtpl/: Booster.py  DataMat.py  __init__.py
src/: main.cpp
src/argmax/: argmax.cpp
src/booster/: booster.cpp  threshold_finder.cpp  threshold_finder.hpp
src/datamat/: data_partition.cpp  datamat.cpp
src/features/: linear_bin_feature.cpp  ordered_feature.cpp  sparse_linear_bin_feature.cpp
src/histogram/: row_histogram.cpp
src/interface/: interface.cpp
src/io/: data_reader.cpp
src/metric/: acc.cpp  auc.cpp  metric.cpp  ndcg.cpp  rmse.cpp
src/node/: additive_linear_node.cpp  linear_node.cpp
src/objective/: binary.cpp  multiclass.cpp  objective.cpp  regression.cpp
src/tree/: leaf_wise_tree.cpp  level_wise_tree.cpp  tree.cpp  tree_predictors.cpp
